<resources>
    <string name="app_name">My Standup App</string>
    <string name="Add">add</string>
    <string name="title">Title</string>
    <string name="item">Item</string>
    <string name="date">Date</string>
    <string name="More">more</string>
    <string name="backmain">BackMain</string>
    <string name="share">share</string>
    <string name="calendar">calendar</string>
    <string name="ok">ok</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yesterday">Что было сделано:</string>
    <string name="today">Что предстоит сделать:</string>
    <string name="problems">Проблемы:</string>
</resources>