<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.note.NoteActivity"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/ic_back_main"
                android:src="@drawable/ic_baseline_back"
                style="@style/IconStyle"
                android:contentDescription="@string/backmain" />

            <ImageView
                android:id="@+id/ic_share"
                android:src="@drawable/ic_baseline_share"
                style="@style/IconStyle"
                android:contentDescription="@string/share" />

            <ImageView
                android:id="@+id/ic_calendar"
                android:src="@drawable/ic_baseline_calendar"
                style="@style/IconStyle"
                android:contentDescription="@string/calendar" />

            <ImageView
                android:id="@+id/ic_ok"
                android:src="@drawable/ic_baseline_check"
                style="@style/IconStyle"
                android:contentDescription="@string/ok" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>