<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:padding="8dp"
                android:layout_width="0dp"
                android:layout_weight="0.9"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_note"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/name"
                    android:text="@string/item"
                    android:layout_below="@id/title_note"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/date_item_list"
                    android:text="@string/date"
                    android:layout_below="@id/name"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/image_item_menu"
                android:src="@drawable/ic_baseline_more"
                android:layout_gravity="end"
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="wrap_content"
                android:contentDescription="@string/More" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>